asset/kubernetes/dex/02-02-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ing-dex-auth
  namespace: tanzu-system-auth
spec:
  tls:
  - hosts:
    - dex.auth.app.local
    secretName: dex-cert-tls
  rules:
  - host: dex.auth.app.local
    http:
      paths:
      - path: /
        backend:
          serviceName: dexsvc
          servicePort: 80
